[project]
name = "mrag"
version = "0.1.0"
description = "ManifoldRAG experiment harness — distance-metric, embedding, and benchmark ablation suite."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "google-genai>=0.3.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "jinja2>=3.1.0",
]
